name:                labyrinth
version:             0.1.0.0
synopsis:            roguelike labyrinth generator
-- description:
homepage:            dogue.in
license:             MIT
license-file:        LICENSE
author:              deweyvm
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

executable labyrinth
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base ==4.6.*, JuicyPixels, vector, random, containers, queue
